# nand2tetris

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
hack_assembler/: Cargo.toml
hack_assembler/src/: assembler.rs
hack_computer/: Cargo.toml
hack_computer/src/: adder.rs  alu.rs  basic_gate.rs  computer.rs  computer_runner.rs  counter.rs  cpu.rs  flip_flap.rs  lib.rs  multi_gate.rs  ram.rs  screen.rs  screen_runner.rs  test_util.rs
hack_computer/test/: MyRect.hack
src/: adder.rs  alu.rs  assembler.rs  basic_gate.rs  computer.rs  computer_runner.rs  const_value.rs  counter.rs  cpu.rs  flip_flap.rs  lib.rs  main.rs  multi_gate.rs  ram.rs  screen.rs  screen_runner.rs  test_util.rs
test/: MyRect.asm
