[package]
name = "nand2tetlis"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]

[[bin]]
name = "screen_runner"
path = "src/screen_runner.rs"

[[bin]]
name = "computer_runner"
path = "src/computer_runner.rs"

[[bin]]
name = "assembler"
path = "src/assembler.rs"


[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
image = "0.19.0"
