[package]
name = "hack_computer"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2021"

[[bin]]
name = "screen_runner"
path = "src/screen_runner.rs"

[[bin]]
name = "computer_runner"
path = "src/computer_runner.rs"

[dependencies]
minifb = "0.25"
image = "0.24"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
